--- a/Andy.html
+++ b/Andy.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div>
             <nav>
-                <p class="Centrartext"><img src="pngs/Ins.png" width="125" height="125" alt=""></p>
+                <p class="Centrartext">🌹❤❤🌹</p>
             </nav>
             <label for="menu">
             </label>
@@ -33,8 +33,9 @@
                 <h1><p class="Centrartext">Andy Samano o andreasjz_</p></h1>
                 <h1 class="Centrartext">Soy fanática de la Formula 1 y amante de los gatos</h1>
                 <h2>.</h2>
-                <h2>.</h2>
                 <h1 class="Centrartext">Sigueme 😘</h1>
+                <h2>.</h2>
+                <h1 class="Centrartext">🌹❤❤🌹</h1>
                 
             </nav>
             
